Implement Lab 6 pipeline and appointments flow